# diff

./: CHANGES  LICENSE  README.md  diff.opam  dune-project
.github/workflows/: main.yaml
example/: dune  example.ml
src/main/: diff.ml  diff.mli  dune
src/ppx/: dune  ppx_diff.ml
test/: diff_test.ml  dune  field_test.ml  test.ml  test_utils.ml
